--- a/WydatkiPhone/AndroidManifest.xml
+++ b/WydatkiPhone/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <activity
             android:name="pl.wppiotrek85.wydatkiphone.EditElementActivity"
             android:label="@string/app_name" />
+        <activity
+            android:name="pl.wppiotrek85.wydatkiphone.ObjectManagerActivity"
+            android:label="@string/title_activity_object_manager" >
+        </activity>
     </application>
 
 </manifest>
