--- a/WydatkiPhone/AndroidManifest.xml
+++ b/WydatkiPhone/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:label="@string/title_activity_object_manager" >
         </activity>
         <activity
+            android:name="pl.wppiotrek85.wydatkibase.activities.CalculatorInput"
+            android:theme="@android:style/Theme.Dialog"
+            android:label="@string/app_name" />
+        <activity
             android:name="pl.wppiotrek85.wydatkiphone.TransactionActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_transaction"
